# spikestats

./: .gitignore  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  types.tsx  utils.tsx
back-end/: .env  Cargo.toml  Dockerfile  Procfile
back-end-stats/: Cargo.toml  Dockerfile
back-end-stats/src/: handlers.rs  main.rs
back-end/migrations/2020-08-13-184455_create_groups/: down.sql  up.sql
back-end/migrations/2020-08-24-210514_initial/: down.sql  up.sql
back-end/src/: auth_handler.rs  error_handler.rs  hash_handler.rs  main.rs  schema.rs
back-end/src/games/: model.rs  routes.rs
back-end/src/groups/: model.rs  routes.rs
back-end/src/players/: model.rs  routes.rs
back-end/src/users/: model.rs  routes.rs
components/: AddChips.tsx  AddConfirm.tsx  AddScoreField.tsx  AddServe.tsx  AllCharts.tsx  GameTable.tsx  GroupList.tsx  Layout.tsx  LoginForm.tsx  LogoBar.tsx  MainBar.tsx  NavStats.tsx
components/Layout/: Layout.tsx  themes.tsx
components/addComponents/: AddChips.tsx  AddConfirm.tsx  AddGroupPlayers.tsx  AddServe.tsx
components/common/: FormikField.tsx  FormikListItem.tsx  GroupListItem.tsx  InputFormField.tsx  MuiMenu.tsx  MyFooter.tsx  PlayerListItem.tsx  nextButton.tsx
components/graphs/: AboutTimeLine.tsx  PlayerPoints.tsx  PlayerWinsSlice.tsx  ServePictorial.tsx  WinPercentage.tsx
components/indexComponent/: IndexApp.tsx
front-end/: app-config.json  next.config.js  package-lock.json  package.json  tailwind.config.js  todo.txt  tsconfig.json
front-end/components/: GameTable.tsx  InfoCard.tsx  PersonalInfo.tsx  Settings.tsx  Statistics.tsx
front-end/pages/: about.js  faq.js  groups.js  index.js  test.js
front-end/util/: calculations.ts  colors.ts  conversions.ts  icons.tsx  react-table-config.d.ts  types.ts
pages/: _app.js  _document.js  about.tsx  code.tsx  groups.tsx  index.tsx  register.tsx
pages/stats/: [groupname].tsx
src/components/: GameTable.tsx  RegisterForm.tsx
util/: swals.tsx  types.tsx  utils.tsx
(+101 files in other folders)
