[package]
name = "back-end"
version = "0.1.0"
authors = ["Raphael <raphael.t.ruban@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
actix-cors = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.115"
serde_json = "1.0"
dotenv = "0.15.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
jsonwebtoken = "7"
sodiumoxide = "0.2.6"