[package]
name = "back-end"
version = "0.1.0"
authors = ["Raphael <raphael.t.ruban@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
actix-rt = "1.1.1"
actix-cors = "0.5.4"
actix-http = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.2.18"
serde = "1.0.123"
serde_json = "1.0.62"
dotenv = "0.15.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.6", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
alcoholic_jwt = "1.0.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }